added compression for application/json in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,9 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
+    gzip_comp_level  9;
+    gzip_types       application/json;
 
     server {
         listen       80;
